# Physics-Engine

./: CMakeLists.txt  README.md  documentacion.md  documentation.md  explicaciones.md  makefile
main/: main.cpp
src/: colisionesContinuas.cpp  colisionesContinuas.h  grafo.cpp  grafo.h  main.cpp  motorDeFisicas.cpp  motorDeFisicas.h  node.cpp  particula.cpp  quadtree.cpp  quadtree.h  rectangulo.cpp  sistema.cpp  sistema.h  vector.cpp  vector.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/cuerpos/: AABB.cpp  AABB.h  caracteristica.cpp  caracteristica.h  circulo.cpp  circulo.h  ciruclo.h  colisiones.cpp  colisiones.h  cuerpoRigido.cpp  cuerpoRigido.h  cuerpos.h  gjk.cpp  gjk.h  linea.cpp  linea.h  poligono.cpp  poligono.h  rectangulo.cpp  rectangulo.h
src/headers/: entidad.h  node.h  particula.h  quadtree.h  rectangulo.h  vector.h
src/herramientas/: area.cpp  area.h  entidad.h  grafo.cpp  grafo.h  quadtree.cpp  quadtree.h
src/herramientas/basicas/: area.h  array.cpp  array.h  entidad.h  rectangulo.cpp  vector.cpp
src/herramientas/quadtree/: node.cpp  node.h  quadtree.cpp  quadtree.h
src/physicsEngine/: node.cpp  particula.cpp  physics.cpp  quadtree.cpp  vector.cpp
src/physicsEngine/headers/: node.h  physics.h  vector.h
src/physics_engine/: body.cpp  body.h  node.cpp  particula.cpp  particula.h  physics.cpp  physics.h  rectangulo.cpp  vector.cpp
src/physics_engine/headers/: entidad.h  node.h  particula.h  physics.h  quadtree.h  rectangulo.h
src/sistema/: atributos.cpp  atributos.h  fuerza.cpp  fuerza.h  fuerzas.cpp  fuerzas.h  historial.h  particula.cpp  particula.h  sistema.cpp  sistema.h  valorReservado.h
tests/: colisionesContinuas_test.cpp  cuerpos_test.cpp  grafo_test.cpp  quadtree_test.cpp  sistema_test.cpp  test_physics_engine.cpp  vector_test.cpp
tests/herramientas/: test_area.cpp  test_quadtree.cpp  test_vector.cpp
tests/herramientas/basicas/: test_area.cpp  test_rectangulo.cpp  test_vector.cpp
tests/herramientas/quadtree/: test_nodo.cpp  test_quadtree.cpp
tests/physics_engine/: test_particula.cpp  test_physics_engine.cpp  test_rectangulo.cpp  test_vector.cpp
